GL/Projet_GL/src/test/deca/context/valid/instanceof/instanceof_null.deca
// Test : instanceof_subclass_is_super
// But : vérifier instanceof avec une sous-classe testée contre une super-classe.
// Couvre : héritage, instanceof.
// Résultat attendu : compilation sans erreur.
// Exécution attendue : condition vraie, affiche "ça marche".

class A {}

{

    if (null instanceof A) {
        println("true");
    } else {
        println("false");
    }
}
